fix: gap & text-style fixes

--- a/app/assets/scss/_typography.scss
+++ b/app/assets/scss/_typography.scss
@@ -192,17 +192,17 @@
 
 @mixin text5 {
   font-family: 'Bounded', sans-serif;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.1;
 
   @media (min-width: $breakpoint-tablet) {
     line-height: 1.4;
-    font-size: 14px;
+    font-size: 18px;
   }
 
   @media (min-width: $breakpoint-desktop) {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
